# median

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  cargo-generate.toml
examples/simp/: Cargo.toml
examples/simp/src/: lib.rs
max-sys/: .gitattributes  Cargo.toml  README.md  TODO.md  build.rs  wrapper-jitter.h  wrapper-max.h  wrapper.h
max-sys/examples/simp/: Cargo.toml
max-sys/examples/simp/src/: lib.rs
max-sys/scripts/: get-includes.rb
max-sys/src/: ffi-macos-aarch64.rs  ffi-macos-x86_64.rs  ffi-windows-x86_64.rs  lib.rs
median/: Cargo.toml  README.md  build.rs
median/examples/: README.md
median/examples/hello_dsp/: Cargo.toml  Makefile.toml
median/examples/hello_dsp/src/: lib.rs
median/examples/jit_gl_simple/: Cargo.toml  Makefile.toml
median/examples/jit_gl_simple/src/: lib.rs
median/examples/jit_scalebias/: Cargo.toml  Makefile.toml
median/examples/jit_scalebias/src/: lib.rs
median/examples/multi/: Cargo.toml  Makefile.toml
median/examples/multi/init/: median-multi-objectmappings.txt
median/examples/multi/src/: lib.rs
median/examples/simp/: Cargo.toml
median/examples/simp/src/: lib.rs
median/src/: alloc.rs  atom.rs  attr.rs  buffer.rs  builder.rs  class.rs  clock.rs  file.rs  inlet.rs  lib.rs  max.rs  method.rs  notify.rs  num.rs  object.rs  outlet.rs  slice.rs  symbol.rs  thread.rs  wrapper.rs
median/src/jit/: attr.rs  matrix.rs  mod.rs  ob3d.rs
median/src/jit/matrix/: iter.rs  mod.rs  parallel.rs
median/src/jit/ob3d/: buffer.rs  chunk.rs  geometry.rs  mod.rs
median/src/test/: atom.rs  sysmem.rs
median/tests/: atom.rs  common.rs  slice.rs  symbol.rs
median/utils/: Makefile.toml
median_macros/: Cargo.toml
median_macros/src/: error.rs  external.rs  lib.rs  tramp.rs
src/: atom.rs  attr.rs  builder.rs  class.rs  clock.rs  error.rs  inlet.rs  lib.rs  max.rs  method.rs  num.rs  object.rs  outlet.rs  slice.rs  symbol.rs  test.rs  types.rs  (+1 more)
(+11 files in other folders)
