[package]
name = "max-sys"
version = "0.1.0"
authors = ["Alex Norman <xnor@cycling74.com>"]
edition = "2018"
build = "build.rs"
description = "sys bindings for the Cycling 74 Max SDK"
license-file = "LICENSE.md"

[features]
build-bindings = ["bindgen"]
default = []

[build-dependencies]
bindgen = { version = "0.55.1",  optional = true }
