[package]
name = "simp"
version = "0.1.0"
authors = ["Alex Norman <xnor@cycling74.com>"]
edition = "2018"

[lib]
name = "simp"
crate-type = ["cdylib"]

[dependencies]
max-sys = { path = "../../../max-sys/" }
median = { path = "../../" }
field-offset = "0.3.2"

[profile.release]
lto = true
panic = "abort"
